@@ -7,6 +7,8 @@ Version 1.4.14 - SVN
   - Added support for Macedonian.
   - Don't allow invalid plugin names in conf.pl --install-plugin
   - Fix warning in Printer Friendly due to missing include (#1849101).
+  - Let configtest.php use optional PEAR dynamic extension loading,
+    patch by Walter Huijbers (#1833123).
 
 Version 1.4.13 - 14 December 2007
 ---------------------------------
